@@ -17,6 +17,7 @@
      FIXED: Crash when recording audio whith no rec directory set.
      FIXED: Only allow audio playback while DSP is running.
   IMPROVED: Gqrx can fit on small screens (900x600 pixels).
+  IMPROVED: Better color gradient for the waterfall.
 
 
      2.2.0  Released August 8, 2013
